cloudflare-tunnels-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: printer-service
spec:
  selector:
    app: alexprinter
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
